--- a/MultithreadedHashing_CaseStudy/MultithreadedHashing_CaseStudy.vcxproj
+++ b/MultithreadedHashing_CaseStudy/MultithreadedHashing_CaseStudy.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DataPoint.cpp" />
+    <ClCompile Include="LinkedList_Test.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MultithreadedHashing_CaseStudy.cpp" />
   </ItemGroup>
