--- a/MultithreadedHashing_CaseStudy/MultithreadedHashing_CaseStudy.vcxproj.filters
+++ b/MultithreadedHashing_CaseStudy/MultithreadedHashing_CaseStudy.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinkedList_Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataPoint.h">
