Demoted from concurrent
Demoted from concurrent for the time being. May revisit project in the future.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
         "command": "cl.exe",
         "args": [
           "/Zi",
+          "/MTd",
           "/EHsc",
           "/Fe:",
           "MultithreadedHashing_CaseStudy.exe",
