beginnings of Concurrency testing
Some testing was added for concurrency testing, running into issues with getting a random character in modern C++ without just getting garbage from some rando pointer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,40 @@
         "xstring": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "atomic": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "forward_list": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "new": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "stdexcept": "cpp",
+        "stop_token": "cpp",
+        "streambuf": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp",
+        "unordered_map": "cpp",
+        "xfacet": "cpp",
+        "xiosbase": "cpp",
+        "xlocmes": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp"
     }
 }
